--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </style>
 </head>
 
-<body class="debug">
+<body class="">
     <header class="container-fluid sticky-top">
         <div class="row bg-success header">
             <div class="col-12"><h1 class="mdi mdi-cat">  JEREMY'S CATZ</h1></div>  
